force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/CHANNEL_ORDERS__Customer_Order_Product_History__c.object-meta.xml
<CustomObject>
    <label>Customer Order Product History</label>
    <nameField>
        <displayFormat>COP-{000000000}</displayFormat>
        <label>Customer Order Product History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Product History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>