force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>