force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>