force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Name__c</fullName>
    <formula>CHANNEL_ORDERS__Customer__r.CHANNEL_ORDERS__Customer_Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>