force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Customer_Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Tenant_Id__c</fullName>
    <label>Tenant Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>