force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Exception_Reason__c</fullName>
    <label>Exception Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>