force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Order_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Order_Product_Id__c</fullName>
    <description>The OrderItem.Id for the related data in org62.</description>
    <inlineHelpText>The OrderItem.Id for the related data in org62.</inlineHelpText>
    <label>Order Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>