force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Order_Start_Date__c</fullName>
    <description>The EffectiveDate of the Order.</description>
    <inlineHelpText>The EffectiveDate of the Order.</inlineHelpText>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>