force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Renewal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Renewal_Quantity__c</fullName>
    <label>Renewal Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>