force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Partner Pricebook Entry</description>
    <label>Standard Partner Pricebook Entry</label>
    <referenceTo>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</referenceTo>
    <relationshipLabel>Standard Partner Pricebook Entry</relationshipLabel>
    <relationshipName>Standard_Partner_Pricebook_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>