force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Standard_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Standard_Product_Name__c</fullName>
    <formula>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__r.CHANNEL_ORDERS__Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Product Name</label>
    <type>Text</type>
</CustomField>