force-app/main/default/objects/CHANNEL_ORDERS__Customer_Order_Product_History__c/fields/CHANNEL_ORDERS__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>